# async-openai

async-openai/: Cargo.toml
async-openai/src/: client.rs  error.rs  lib.rs
async-openai/src/types/: chat.rs  mod.rs
