[package]
name = "async-openai"
version = "0.29.3"
authors = ["Himanshu Neema"]
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["openai", "async", "openapi", "ai"]
description = "Rust library for OpenAI"
edition = "2021"
rust-version = { workspace = true }
license = "MIT"
readme = "README.md"
homepage = "https://github.com/64bit/async-openai"
repository = "https://github.com/64bit/async-openai"

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]
realtime = ["dep:tokio-tungstenite"]
# Bring your own types
byot = []

[dependencies]
async-openai-macros = { path = "../async-openai-macros", version = "0.1.0" }
axum = { version = "^0.8.0", default-features = false, features = ["json"] }
backoff = { version = "^0.4.0", features = ["tokio"] }
base64 = "^0.22.0"
futures = "^0.3.0"
rand = "^0.9.0"
reqwest = { version = "^0.12.0", features = [
  "json",
  "stream",
  "multipart",
], default-features = false }
reqwest-eventsource = "^0.6.0"
serde = { version = "^1.0.0", features = ["derive", "rc"] }
serde_json = "^1.0.0"
thiserror = "^2.0.0"
tokio = { version = "^1.0.0", features = ["fs", "macros"] }
tokio-stream = "^0.1.0"
tokio-util = { version = "^0.7.0", features = ["codec", "io-util"] }
tracing = "^0.1.0"
derive_builder = "^0.20.0"
secrecy = { version = "^0.10.0", features = ["serde"] }
bytes = "^1.0.0"
eventsource-stream = "^0.2.0"
tokio-tungstenite = { version = "^0.26.0", optional = true, default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"
serde_json = "1.0"

[[test]]
name = "bring-your-own-type"
required-features = ["byot"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
